src/sphinx/_static/styles.css
.navbar-form .form-control {
  font-size: 13px;
  padding: 0px;
}

nav.navbar .navbar-form .form-group {
  line-height: inherit;
}
.navbar-version {
  font-size: 0.5em;
}

.ribbon {
  background-color: #e60091;
  overflow: hidden;
  white-space: nowrap;
  /* top left corner */
  position: absolute;
  right: -50px;
  top: 100px;
  /* 45 deg ccw rotation */
  -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
      -ms-transform: rotate(45deg);
       -o-transform: rotate(45deg);
          transform: rotate(45deg);
  /* shadow */
  -webkit-box-shadow: 0 0 10px #888;
     -moz-box-shadow: 0 0 10px #888;
          box-shadow: 0 0 10px #888;
}

.ribbon a {
  border: 1px solid #fff;
  overflow: hidden;
  color: #fff;
  display: block;
  font: bold 81.25% 'Helvetica Neue', Helvetica, Arial, sans-serif;
  margin: 1px 0;
  padding: 10px 50px;
  text-align: center;
  text-decoration: none;
  /* shadow */
  text-shadow: 0 0 5px #444;
}

